[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Scott Nelson <scott@scottnelson.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
failure = "0.1.6"
itertools = "0.8"
openssl = "0.10.48"
rand = "0.7.2"
regex = "1"
